<resources>
    <string name="app_name">ChatUp</string>
    <string name="sign_in_title">SIGN IN</string>
    <string name="email_text_placeholder">Email</string>
    <string name="password_text_placeholder">Password</string>
    <string name="or_sign_in_with">or sign in with</string>
    <string name="continue_text_button">Continue</string>
    <string name="create_a_new_account_text">Create a new account</string>
    <string name="sign_up_title">SIGN UP</string>
    <string name="or_sign_up_with">or sign up with</string>
    <string name="username_text_placeholder">Username</string>
    <string name="confirm_password_text_placeholder">Confirm Password</string>
    <string name="already_have_an_account_text">Already have an account</string>
    <string name="start_chatting_with_chatup_title">START CHATTING WITH ChatUp</string>
    <string name="get_started_button">Get Started</string>
    <string name="get_started_info_text">Why make something simple complex? This is simply a simple chatting app with
        simple features, simple interface, and simply easy to use. Let’s get started!
    </string>
    <string name="make_an_account_title">MAKE AN ACCOUNT</string>
    <string name="create_account_button">Create Account</string>
    <string name="initial_sign_up_info_text">Tell the whole world who you are and be proud! You need to make an account
        to chat with everybody else. What are you waiting for? Create an account now!
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_menu">Home</string>
    <string name="user_own_profile_menu">Profile</string>
    <string name="settings_menu">Settings</string>
    <string name="account_id_title">Account ID</string>
    <string name="phone_number_title">Phone Number</string>
    <string name="email_title">Email</string>
    <string name="gender_title">Gender</string>
    <string name="user_name">User Name</string>
    <string name="search_hint_text">Search</string>
    <string name="no_chats_text">No chats</string>
    <string name="no_friends_text">No friends</string>
    <string name="verify_email_text">VERIFY EMAIL</string>
    <string name="verify_email_info_one">You need to verify your email before using our app. Please check your email\'s
        inbox or spam folder.
    </string>
    <string name="verify_email_info_two">Send another verification?</string>
    <string name="bio_title">Bio</string>
    <string name="swipe_down_to_refresh_user_info_text">Swipe down to refresh user info</string>
    <string name="male_gender_text">Male</string>
    <string name="female_gender_text">Female</string>
    <string name="rather_not_say_gender_text">Rather not say</string>
    <string name="save_button">Save</string>
    <string name="forgot_password_text">Forgot password</string>
</resources>