<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/initial_menu_background"
    tools:context=".signinup.SignIn">

    <RelativeLayout
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/sign_in_text"
            android:fontFamily="@font/ud_digikyokasho_n_b"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_centerHorizontal="true"
            android:text="@string/sign_in_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/email_input"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:layout_alignTop="@+id/sign_in_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="77dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/user_text_input_background"
            android:fontFamily="@font/ud_digikyokasho_n_r"
            android:hint="@string/email_text_placeholder"
            android:inputType="textEmailAddress"
            android:paddingStart="13dp"
            android:paddingEnd="13dp"
            android:textColor="@color/black"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/password_input"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:layout_alignTop="@+id/email_input"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="62dp"
            android:autofillHints="password"
            android:background="@drawable/user_text_input_background"
            android:fontFamily="@font/ud_digikyokasho_n_r"
            android:hint="@string/password_text_placeholder"
            android:inputType="textPassword"
            android:paddingStart="13dp"
            android:paddingEnd="13dp"
            android:textColor="@color/black"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/password_input"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:fontFamily="@font/ud_digikyokasho_n_r"
            android:text="@string/forgot_password_text"
            android:textColor="#7391E4"
            android:textSize="14sp"/>

        <android.widget.Button
            android:id="@+id/continue_button"
            android:layout_width="328dp"
            android:layout_height="48dp"
            android:layout_alignTop="@+id/forgot_password"
            android:layout_marginTop="43dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:background="@drawable/button_background"
            android:fontFamily="@font/ud_digikyokasho_n_r"
            android:text="@string/continue_text_button"
            android:textAllCaps="false"
            android:textColor="#FBFBFB"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/create_new_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/continue_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:fontFamily="@font/ud_digikyokasho_n_r"
            android:text="@string/create_a_new_account_text"
            android:textColor="#7391E4"
            android:textSize="14sp"/>

    </RelativeLayout>

</RelativeLayout>