<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/initial_menu_background"
    tools:context=".getstarted.GetStarted">

    <RelativeLayout
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/get_started_image"
            android:layout_width="306dp"
            android:layout_height="255dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/undraw_chatting_re_j55r_1"/>

        <TextView
            android:id="@+id/get_started_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/get_started_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="313dp"
            android:fontFamily="@font/ud_digikyokasho_n_b"
            android:text="@string/start_chatting_with_chatup_title"
            android:textColor="@color/black"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/get_started_info"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/get_started_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="52dp"
            android:fontFamily="@font/ud_digikyokasho_n_r"
            android:text="@string/get_started_info_text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp"/>

        <android.widget.Button
            android:id="@+id/get_started_button"
            android:layout_width="328dp"
            android:layout_height="48dp"
            android:layout_alignTop="@+id/get_started_info"
            android:layout_marginTop="186dp"
            android:background="@drawable/button_background"
            android:fontFamily="@font/ud_digikyokasho_n_r"
            android:text="@string/get_started_button"
            android:textAllCaps="false"
            android:textColor="#FBFBFB"
            android:textSize="16sp"/>

    </RelativeLayout>

</RelativeLayout>