<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/initial_menu_background"
    tools:context=".signinup.SignUp">

    <RelativeLayout
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/sign_up_text"
            android:fontFamily="@font/ud_digikyokasho_n_b"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_centerHorizontal="true"
            android:text="@string/sign_up_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/username_input"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:layout_alignTop="@+id/sign_up_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="77dp"
            android:autofillHints="name"
            android:background="@drawable/user_text_input_background"
            android:fontFamily="@font/ud_digikyokasho_n_r"
            android:hint="@string/username_text_placeholder"
            android:inputType="text"
            android:paddingStart="13dp"
            android:paddingEnd="13dp"
            android:textColor="@color/black"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/email_input"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_alignTop="@+id/username_input"
            android:layout_marginTop="62dp"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
            android:background="@drawable/user_text_input_background"
            android:fontFamily="@font/ud_digikyokasho_n_r"
            android:hint="@string/email_text_placeholder"
            android:paddingStart="13dp"
            android:paddingEnd="13dp"
            android:textColor="@color/black"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/password_input"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:layout_alignTop="@+id/email_input"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="62dp"
            android:autofillHints="password"
            android:background="@drawable/user_text_input_background"
            android:fontFamily="@font/ud_digikyokasho_n_r"
            android:hint="@string/password_text_placeholder"
            android:inputType="textPassword"
            android:paddingStart="13dp"
            android:paddingEnd="13dp"
            android:textColor="@color/black"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/failed_pass_text_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/password_input"
            android:layout_marginStart="7dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/ud_digikyokasho_n_r"
            android:text="Needs to have more than 5 letters!"
            android:textColor="#FF0000"
            android:textSize="13sp"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/failed_pass_text_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/password_input"
            android:layout_marginStart="7dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/ud_digikyokasho_n_r"
            android:text="Needs to have at least a number!"
            android:textColor="#FF0000"
            android:textSize="13sp"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/failed_pass_text_letter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/password_input"
            android:layout_marginStart="7dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/ud_digikyokasho_n_r"
            android:text="Needs to have at least a letter"
            android:textColor="#FF0000"
            android:textSize="13sp"
            android:visibility="invisible"/>

        <EditText
            android:id="@+id/confirm_password_input"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:layout_alignTop="@+id/password_input"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="62dp"
            android:autofillHints="password"
            android:background="@drawable/user_text_input_background"
            android:fontFamily="@font/ud_digikyokasho_n_r"
            android:hint="@string/confirm_password_text_placeholder"
            android:inputType="textPassword"
            android:paddingStart="13dp"
            android:paddingEnd="13dp"
            android:textColor="@color/black"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/failed_confirmpass_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/confirm_password_input"
            android:layout_marginStart="7dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/ud_digikyokasho_n_r"
            android:text="Not the same as the first inputted password!"
            android:textColor="#FF0000"
            android:textSize="13sp"
            android:visibility="invisible"/>

        <android.widget.Button
            android:id="@+id/continue_button"
            android:layout_width="328dp"
            android:layout_height="48dp"
            android:layout_alignTop="@id/confirm_password_input"
            android:layout_marginTop="83dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:background="@drawable/button_background"
            android:fontFamily="@font/ud_digikyokasho_n_r"
            android:text="@string/continue_text_button"
            android:textAllCaps="false"
            android:textColor="#FBFBFB"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/already_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/continue_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:fontFamily="@font/ud_digikyokasho_n_r"
            android:text="@string/already_have_an_account_text"
            android:textColor="#7391E4"
            android:textSize="14sp"/>

    </RelativeLayout>

</RelativeLayout>